--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "react-router-dom": "^7.12.0",
-    "lucide-react": "^0.562.0",
-    "framer-motion": "^12.26.2",
-    "@supabase/supabase-js": "^2.90.1"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.21.0",
+    "lucide-react": "0.300.0",
+    "framer-motion": "10.16.4",
+    "@supabase/supabase-js": "2.39.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
